avance para desktop

--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -4,6 +4,7 @@
 gris_oscuro = #333333
 gris_claro = #818181
 rojo = #BD255B
+gris_mas_claro = #F0F0F0
 
 a
 	text-decoration none
@@ -12,6 +13,11 @@ body
 	font-size 16px 
 figure
 	margin 0
+img
+	vertical-align top
+ul
+	margin 0
+	padding 0 
 //buttons
 .button-menu
 	color gris_oscuro
@@ -60,6 +66,15 @@ figure
 	padding 1em
 .padding-tb
 	padding 1em 0
+.left
+	float left
+.right
+	float right
+.wrap
+	width 1000px
+.round
+	border-radius 50%
+	overflow hidden
 .progress
 	margin 1em 0
 	position relative
@@ -114,5 +129,84 @@ figure
 		margin .5em 0
 
 .playing
+	// display none
 	&.small
 		width 20em
+.input
+	border 1px solid gris_claro
+	height 2.5em
+	border-radius 5px
+	padding 0 1em 0 2em
+.search-icon
+	color gris_claro
+	left .5em
+	position absolute
+	top .8em
+.close-icon
+	color gris_claro
+	position absolute
+	right .5em
+	top .5 em
+	font-size 1.2em
+
+@media screen and (min-width:480px)
+	.sermon
+		&:nth-child(even)
+			margin-right 1em
+	.image
+		img 
+			width 100%
+			height auto
+	.playing
+		&.medium
+			width auto
+
+@media screen and (min-width:1000px)
+	body
+		background gris_mas_claro
+	.button-menu
+		display none
+	.menu
+		display block
+		overflow hidden
+		background gris_mas_claro
+		.item
+			float left
+			list-style none
+			a
+				color gris_oscuro
+				display block
+				padding 1em
+				text-transform uppercase
+				border-top 5px solid transparent
+				&:hover
+					border-top 5px solid gris_claro
+	.header
+		height auto
+		.title
+			display none
+	.isotipo
+		width 300px
+	.logo
+		background white
+		padding 1.3em 0
+		overflow hidden
+	.avatar
+		width 38px
+		height 38px
+	.username
+		color gris_claro
+		position relative
+		top 9px
+		margin-left .5em
+		&:after
+			border-left 7px solid transparent
+			border-right 7px solid transparent
+			border-top 9px solid gris_claro
+			content ""
+			display inline-block
+			margin-left .4em
+	.user
+		display flex
+			
+	
