--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -132,6 +132,7 @@ ul
 	// display none
 	&.small
 		width 20em
+		margin 0 auto
 .input
 	border 1px solid gris_claro
 	height 2.5em
@@ -148,6 +149,48 @@ ul
 	right .5em
 	top .5 em
 	font-size 1.2em
+.playlist
+	display none
+.logo
+	display none
+.search
+	margin-right 1em
+.playlist
+	display none
+	width 22em
+	padding 0 2em
+	border-left 1px solid gris_claro
+	.list
+		list-style none
+	.item
+		padding 1em 0
+	.action
+		font-size .8em
+.isotipo
+	width 300px
+.logo
+	display none
+	background white
+	padding 1.3em 0
+	overflow hidden
+.avatar
+	width 38px
+	height 38px
+.username
+	color gris_claro
+	position relative
+	top 9px
+	margin-left .5em
+	&:after
+		border-left 7px solid transparent
+		border-right 7px solid transparent
+		border-top 9px solid gris_claro
+		content ""
+		display inline-block
+		margin-left .4em
+.user
+	display flex
+	margin-right 3em
 
 @media screen and (min-width:480px)
 	.sermon
@@ -160,16 +203,23 @@ ul
 	.playing
 		&.medium
 			width auto
-
-@media screen and (min-width:1000px)
+//tabletas de baja resolucion nexus 7
+@media screen and (min-width:960px)
 	body
 		background gris_mas_claro
 	.button-menu
 		display none
+	.playing
+		padding-top 1.3em
+		&.large
+			margin 0 auto
+			width 59em
+			overflow hidden
 	.menu
 		display block
 		overflow hidden
 		background gris_mas_claro
+		border-top 1px solid gris_claro
 		.item
 			float left
 			list-style none
@@ -181,32 +231,26 @@ ul
 				border-top 5px solid transparent
 				&:hover
 					border-top 5px solid gris_claro
+	.estudio
+		width 32.5em
+		float left
+		.description
+			display none
 	.header
 		height auto
+		border none
 		.title
 			display none
-	.isotipo
-		width 300px
 	.logo
-		background white
-		padding 1.3em 0
-		overflow hidden
-	.avatar
-		width 38px
-		height 38px
-	.username
-		color gris_claro
-		position relative
-		top 9px
-		margin-left .5em
-		&:after
-			border-left 7px solid transparent
-			border-right 7px solid transparent
-			border-top 9px solid gris_claro
-			content ""
-			display inline-block
-			margin-left .4em
+	.playlist
+		display block
+
+@media screen and (min-width:1000px)
+	.playing
+		&.large
+			width 62.5em
 	.user
-		display flex
+		margin-right 0
+
 			
 	
