--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -1,5 +1,20 @@
+@import "nib"
 @import "normalize.styl"
 @import "fonts.styl"
+
+vendor-prefixes = webkit moz ms o
+/*animacion(parametro)
+	-webkit-animation parametro
+	-moz-animation parametro
+	-ms-animation parametro
+	-o-animation parametro
+	animation parametro
+transformacion(parametro)
+	-webkit-transform parametro
+	-moz-transform parametro
+	-ms-transform parametro
+	-o-transform parametro
+	transform parametro*/
 
 gris_oscuro = #333333
 gris_claro = #818181
@@ -27,8 +42,8 @@ ul
 	top 50%
 //oocss clasess
 .container
-	padding 1.4rem
 	font-size 0
+	padding 1.4rem
 	text-align center
 .action
 	color white
@@ -39,11 +54,11 @@ ul
 	&.gray
 		color gris_claro
 .actions
-	position absolute
+	background rgba(black, .3)
 	bottom 0
 	left 0
+	position absolute
 	right 0
-	background rgba(black, .3)
 .border-bottom
 	border-bottom 1px solid gris_claro
 .name
@@ -81,8 +96,8 @@ ul
 	.min
 	.max
 		font-size .8em
-		top -5px
 		position absolute
+		top -5px
 	.min
 		left 0
 	.max
@@ -91,15 +106,17 @@ ul
 		background gris_claro
 		border-radius 5px
 		height 5px
-		width 75%
 		margin 0 auto
+		width 75%
 	.state
+		animation 10s state infinite linear
 		background rojo
 		border-radius 5px
 		height 5px
-		width 30%
 		position relative
+		width 30%
 	.circle
+		animation 1s circle infinite
 		background gris_oscuro
 		border-radius 50%
 		height 10px
@@ -107,6 +124,19 @@ ul
 		right 0
 		top -2px
 		width 10px
+		
+@keyframes state
+	0%
+		width 0
+	100%
+		width 100%
+@keyframes circle
+	0%
+		transform scale(1)
+	100%
+		opacity 0
+		transform scale(2)
+		
 .header
 	height 3.5em
 	/*a
@@ -121,8 +151,8 @@ ul
 	font-size 1rem
 	margin-bottom 1em
 	margin-right 1em
-	width 8rem
 	text-align left
+	width 8rem
 	&:nth-child(even)
 		margin-right 0
 	p
@@ -131,12 +161,12 @@ ul
 .playing
 	// display none
 	&.small
-		width 20em
 		margin 0 auto
+		width 20em
 .input
 	border 1px solid gris_claro
-	height 2.5em
 	border-radius 5px
+	height 2.5em
 	padding 0 1em 0 2em
 .search-icon
 	color gris_claro
@@ -145,10 +175,10 @@ ul
 	top .8em
 .close-icon
 	color gris_claro
+	font-size 1.2em
 	position absolute
 	right .5em
 	top .5 em
-	font-size 1.2em
 .playlist
 	display none
 .logo
@@ -156,10 +186,10 @@ ul
 .search
 	margin-right 1em
 .playlist
-	display none
-	width 22em
-	padding 0 2em
 	border-left 1px solid gris_claro
+	display none
+	padding 0 2em
+	width 22em
 	.list
 		list-style none
 	.item
@@ -169,18 +199,18 @@ ul
 .isotipo
 	width 300px
 .logo
-	display none
 	background white
-	padding 1.3em 0
+	display none
 	overflow hidden
+	padding 1.3em 0
 .avatar
-	width 38px
 	height 38px
+	width 38px
 .username
 	color gris_claro
+	margin-left .5em
 	position relative
 	top 9px
-	margin-left .5em
 	&:after
 		border-left 7px solid transparent
 		border-right 7px solid transparent
@@ -198,8 +228,8 @@ ul
 			margin-right 1em
 	.image
 		img 
-			width 100%
 			height auto
+			width 100%
 	.playing
 		&.medium
 			width auto
@@ -213,32 +243,32 @@ ul
 		padding-top 1.3em
 		&.large
 			margin 0 auto
-			width 59em
 			overflow hidden
+			width 59em
 	.menu
-		display block
-		overflow hidden
 		background gris_mas_claro
 		border-top 1px solid gris_claro
+		display block
+		overflow hidden
 		.item
 			float left
 			list-style none
 			a
+				border-top 5px solid transparent
 				color gris_oscuro
 				display block
 				padding 1em
 				text-transform uppercase
-				border-top 5px solid transparent
 				&:hover
 					border-top 5px solid gris_claro
 	.estudio
-		width 32.5em
 		float left
+		width 32.5em
 		.description
 			display none
 	.header
-		height auto
 		border none
+		height auto
 		.title
 			display none
 	.logo
