--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -259,6 +259,7 @@ ul
 				display block
 				padding 1em
 				text-transform uppercase
+				transition .3s border-top
 				&:hover
 					border-top 5px solid gris_claro
 	.estudio
